    the same description being number 0,1,2,3 instead of 0,01,002, etc.
    
    When editing actions, if a field not in the current list of fields was
    used, then the list of saved fields would contain only that field.
    
    If a file contained an ID3v2.2 tag than that tag would be shown
    twice in the Stored Tags window.
    
    Patterns that use scripting functions like $validate(arg1,,arg3) will
    work correctly in that the second argument will evaluate to an empty
    string instead of being discarded.

    For Discogs Tag Source: Images were being retrieved even if disabled
    when using textual searches.

    Changing files in Extended Tags changes the selection in File-View,
    thereby ensuring changes are written to the correct file.

    Editing colour in Extended Tags remaining green even if changed.
    Multiple value handling for ID3v2.3

Changes:
    Unicode support for Replace with Regular Expression function.
    Overhaul of Masstagging internals.
    peformersortorder has been renamed to performersortorder in ID3 tags.
    The semi-colon character(';') has been removed from the list of
    invalid filename chars.
    
    Renaming dirs hooks into Tag->Dir function now.
    lyrics_us is now unsyncedlyrics

    Proper error messages differentiating whether the error occurred.
    while writing to files or renaming dirs, files.
    
    Subfolder checkbox in the Filesystem window being enabled
    when it had no reason to be.
    
    If last loaded dir is not found on startup,
    then all parents of that dir (still existing) will be expanded.
    
    Functions dialog restores last used function upon first load.

    In QuodLibet Library:
        Changes the fields: _rating to rating, _skipcount to __skipcount, _playcount to playcount.
        All fields are caseless.
        Fixed the loading of fields with numbers for values.
        Added the __tag and __tag_read fields.