@@ -8,4 +8,6 @@ Phil Thomson and the Qt and PyQt people for PyQt4.
 Michael Foord and Nicola Larosa for ConfigObj.
 The Oxygen team for the Oxygen icons.
 
+Raphael Como for the French translation.
+
 And for the people whose code I stole, those who helped be out on discussion boards and to open-source creators. Thanks a bunch.
